--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,13 @@ div {
     background-color: teal;
     color: white;
 }
+
+:root {
+    --div-background-color: #00FF00;
+    --div-width:200px;
+    --div-height:100px;
+    --div-border: 2px solid black;
+    --div-image: url('/images/bird.jpg');
+    --div-bg-position:center;
+
+}
